--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -18,10 +18,6 @@ android {
     buildTypes {
         release {
             minifyEnabled = false
-            proguardFiles(
-                getDefaultProguardFile("proguard-android-optimize.txt"),
-                "proguard-rules.pro"
-            )
         }
     }
     compileOptions {
@@ -30,6 +26,13 @@ android {
     }
     kotlinOptions {
         jvmTarget = "1.8"
+    }
+    publishing {
+        singleVariant("release") {
+            // if you don't want sources/javadoc, remove these lines
+            withJavadocJar()
+            withSourcesJar()
+        }
     }
 }
 
@@ -69,21 +72,15 @@ tasks.register('jar', Jar) {
 artifacts {
     archives jar
 }
-publishing {
-    repositories {
-        maven {
-            // Local Maven repository path
-            url = uri("/Users/a.dusnoki/AndroidStudioProjects/LIBS")
-        }
-    }
-
-    publications {
-        aar(MavenPublication) {
-            groupId = 'com.example'
-            artifactId = 'my-library'
-            version = '1.0.0'
-            artifact("$buildDir/outputs/aar/mylibrary-debug.aar")
-            artifact(tasks.jar.outputs.getFiles().singleFile)
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId 'com.example'
+                artifactId 'mylibrary'
+                version = '1.0.0'
+            }
         }
     }
 }
